Char-gen Uses next char func; add top-k sampling

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -285,39 +285,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_text(\n",
-    "    model,\n",
+    "def next_character(\n",
     "    input_str: str,\n",
-    "    num_chars: int = 100,\n",
+    "    model,\n",
+    "    token_mapping: TokenMapping,\n",
     "    temperature: float = 1.0,\n",
+    "    k: int | None = None,\n",
     ") -> str:\n",
     "    # Set model into \"evaluation mode\" (deactivates things like Dropout layers)\n",
     "    model.eval()\n",
     "    tokenized_text: list[str] = tokenize_text(input_str)\n",
     "    input_tensor = tokens_to_id_tensor(\n",
     "        tokens=tokenized_text,\n",
-    "        token_id_mapping=character_mapping.token2id,\n",
+    "        token_id_mapping=token_mapping.token2id,\n",
     "    )\n",
-    "    \n",
-    "    generated_tokens = []\n",
+    "\n",
     "    with torch.no_grad():\n",
-    "        for _ in range(num_chars):\n",
-    "            output = model(input_tensor.to(device))\n",
-    "            probabilities = nn.functional.softmax(\n",
-    "                output[0, -1] / temperature,\n",
-    "                dim=0,\n",
-    "            )\n",
-    "            next_char_idx = torch.multinomial(probabilities, 1).item()\n",
-    "            generated_tokens.append(character_mapping.id2token(next_char_idx))\n",
-    "            input_tensor = torch.cat(\n",
-    "                [\n",
-    "                    input_tensor,\n",
-    "                    torch.tensor([[next_char_idx]], dtype=torch.long),\n",
-    "                ],\n",
-    "                1,\n",
-    "            )\n",
-    "    # Input string (decoded from tokenization) and generated string\n",
-    "    full_text = ''.join(tokenized_text+ generated_tokens)\n",
+    "        output = model(input_tensor.to(device))\n",
+    "        # Use temperature to change probabilities\n",
+    "        probabilities = nn.functional.softmax(\n",
+    "            output[0, -1] / temperature,\n",
+    "            dim=0,\n",
+    "        )\n",
+    "        # Sampling from probabilities\n",
+    "        sorted_ids = torch.argsort(probabilities, descending=True)\n",
+    "        # Top-k: Defaults to using all given characters\n",
+    "        if k is None:\n",
+    "            sorted_ids_subset = sorted_ids\n",
+    "        else:\n",
+    "            sorted_ids_subset = sorted_ids[:k]\n",
+    "        index_of_sorted = torch.multinomial(\n",
+    "            probabilities[sorted_ids_subset],\n",
+    "            1,\n",
+    "        ).item()\n",
+    "        next_char_idx = sorted_ids_subset[index_of_sorted].item()\n",
+    "        \n",
+    "        return token_mapping.id2token(next_char_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text_by_char(\n",
+    "    input_str: str,\n",
+    "    model,\n",
+    "    token_mapping: TokenMapping = character_mapping,\n",
+    "    num_chars: int = 100,\n",
+    "    temperature: float = 1.0,\n",
+    "    k: int | None = None,\n",
+    ") -> str:\n",
+    "    generated_tokens = []\n",
+    "    for _ in range(num_chars):\n",
+    "        next_char = next_character(\n",
+    "            input_str=(input_str + ''.join(generated_tokens)),\n",
+    "            model=model,\n",
+    "            token_mapping=token_mapping,\n",
+    "            temperature=temperature,\n",
+    "            k=k,\n",
+    "        )\n",
+    "        generated_tokens.append(next_char)\n",
+    "    # Input string and generated string\n",
+    "    full_text = input_str+ ''.join(generated_tokens)\n",
     "    return full_text"
    ]
   },
@@ -330,59 +361,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.2919828321225344\n",
-      "[00m 6.2s (0 0%) 1.8714]\n",
+      "Epoch 1/5, Loss: 2.2609775224051916\n",
+      "[00m 6.3s (0 0%) 1.8597]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to betumen:\n",
-      "marcisuchrinur the in the thinding then igare.\n",
+      "To be or not to be magk,\n",
+      "feard supond tebutther cucpether,\n",
+      "to nowd tood.\n",
       "\n",
-      "trath, eont lade fity\n",
-      "e\n",
-      "tinius felint;\n",
-      "on.\n",
-      "po\n",
-      "Epoch 2/5, Loss: 1.9326998647409506\n",
-      "[00m 12.4s (1 20%) 1.9571]\n",
+      "voe; tham shart, nust of bendaring that wo. \n",
+      "Epoch 2/5, Loss: 1.9069556816698263\n",
+      "[00m 12.7s (1 20%) 1.9038]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beil his now shut bllers\n",
-      "the be\n",
-      "rocers thaint.\n",
+      "To be or not to beir gunt as you the do is the trun; all, is do make, endon.\n",
       "\n",
-      "vavest amse'd, tores cam: a firing in agate hand re au\n",
-      "Epoch 3/5, Loss: 1.8500160524258598\n",
-      "[00m 18.7s (2 40%) 1.9853]\n",
+      "menenius:\n",
+      "wath qummy ao'r, te't me\n",
+      "morci\n",
+      "Epoch 3/5, Loss: 1.8219082584777198\n",
+      "[00m 19.0s (2 40%) 1.7544]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bead,\n",
-      "and heand in war.\n",
-      "'pear: frus. i deech.\n",
+      "To be or not to be all med guare with trustoleceria:\n",
+      "with to the cumm.\n",
       "\n",
-      "vall you shoums op your ofars\n",
-      "erone this his greawndold\n",
-      "Epoch 4/5, Loss: 1.8065914523487274\n",
-      "[00m 25.0s (3 60%) 2.0761]\n",
+      "firt begoous: moded home, i kneed corior:\n",
+      "spiv\n",
+      "Epoch 4/5, Loss: 1.779409009427689\n",
+      "[00m 25.4s (3 60%) 1.8045]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beirs, hather as's conirite?\n",
-      "\n",
-      "volureliess your evike would vile haccess, as spoarves:\n",
-      "my parts have be\n",
-      "Epoch 5/5, Loss: 1.778434970356024\n",
-      "[00m 31.4s (4 80%) 2.1123]\n",
+      "To be or not to be comage he giet do dimmackees thy geart in ladiones, sun\n",
+      "be caius; ins ad renib the love look. iye b\n",
+      "Epoch 5/5, Loss: 1.7532570772658522\n",
+      "[00m 31.7s (4 80%) 1.6090]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be your ch,\n",
-      "he i shad\n",
-      "preshan in accuhing.\n",
+      "To be or not to beglum.\n",
       "\n",
-      "fir,\n",
-      "alrand\n",
-      "the batiol:\n",
-      "the have i'lst me noth linenh nay,\n"
+      "volumnius:\n",
+      "who whis\n",
+      "to yourt for i coor hids\n",
+      "fare a bom; when ind fese were leadech seest, yo\n"
      ]
     }
    ],
@@ -406,7 +429,11 @@
     "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
     "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
     "    print('-'*72)\n",
-    "    gen_output = generate_text(model, PHRASE, 100)\n",
+    "    gen_output = generate_text_by_char(\n",
+    "        input_str=PHRASE,\n",
+    "        model=model,\n",
+    "        num_chars=100,\n",
+    "    )\n",
     "    print(gen_output)"
    ]
   },
@@ -419,23 +446,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to bejad your fidemare,\n",
-      "we have thinius,\n",
-      "seeders. he tore i power\n",
-      "theil she tore cominius:\n",
-      "all thees. hon\n"
+      "To be or not to be the generia:\n",
+      "now thun i but if loor,\n",
+      "enepont pould whose it my aless\n",
+      "piton this to as you whis in r\n"
      ]
     }
    ],
    "source": [
-    "output = generate_text(model, 'To be or not to be', 100)\n",
+    "output = generate_text_by_char(\n",
+    "    input_str='To be or not to be',\n",
+    "    model=model,\n",
+    "    num_chars=100,\n",
+    "    temperature=1.0,\n",
+    ")\n",
     "print(output)"
    ]
   },
@@ -462,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,33 +642,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.212735981256713\n",
-      "[00m 2.7s (0 0%) 5.6615]\n",
+      "Epoch 1/5, Loss: 6.222023793380626\n",
+      "[00m 2.6s (0 0%) 5.8012]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be sic corn by better byrskin : success and sensiblerk mean, i o : let behind an cup lord people cry with comeessment o to\n",
-      "Epoch 2/5, Loss: 5.425861670733078\n",
-      "[00m 5.5s (1 20%) 5.0083]\n",
+      "To be or not to be : of s bring holding. the prisoner with of shields tongue. shallath, they citizen coffin find masters won.lam but : auf issue are,\n",
+      "Epoch 2/5, Loss: 5.59244353927835\n",
+      "[00m 5.3s (1 20%) 4.5287]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be in interior men, with were him better corn a malice ore in. marcius : to faus i have lies meneni you not famously, o\n",
-      "Epoch 3/5, Loss: 4.860306764171071\n",
-      "[00m 8.3s (2 40%) 5.1678]\n",
+      "To be or not to be ' s the horses the battle of the i could : and fairness strokes my to see all themselves mercyus you. their than, made me er slaves\n",
+      "Epoch 3/5, Loss: 5.035860540803042\n",
+      "[00m 7.9s (2 40%) 4.0187]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be maids with us and ioth than it th fair of idle geese, and their are of capitol shall softon rash charges and else what must oreni\n",
-      "Epoch 4/5, Loss: 4.4436827755902515\n",
-      "[00m 11.1s (3 60%) 4.7057]\n",
+      "To be or not to be day ; nay, devotion are - people, sir? is coriolan not o shall and in pride : la that token then he lady, do\n",
+      "Epoch 4/5, Loss: 4.611682188771937\n",
+      "[00m 10.6s (3 60%) 5.0935]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##oth. br thankob first citizen :e : my nosely wore it your doing theirks al, his sacrifice, and upon my sacrifice, you\n",
-      "Epoch 5/5, Loss: 4.121911794889872\n",
-      "[00m 13.9s (4 80%) 3.8154]\n",
+      "To be or not to be believe know, so womb, like horse? messenger. fix sound? what, and gr look o us is o the likely will done, is\n",
+      "Epoch 5/5, Loss: 4.2799862336068255\n",
+      "[00m 13.3s (4 80%) 4.0613]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##qui map soldier : thou all it, sir, age of himself as to, by the people, with only ;, that merit the friend,\n"
+      "To be or not to be constant any to good seat towns you, i am it'tis, well, greaterlves a damns, weep you'd you titus one bled\n"
      ]
     }
    ],
@@ -673,14 +704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be our wholeinius : especially. first citizen : toiculate have task? marcius : be go cai sons!, neither cannot : he'd\n"
+      "To be or not to be fine. men's jun stands be of the small physicalth, hard ; men against blood to, : in is ll arguing is induced put we\n"
      ]
     }
    ],
