Token textgen uses next_token (move to helper.py)

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -285,70 +285,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def next_character(\n",
-    "    input_str: str,\n",
-    "    model,\n",
-    "    token_mapping: TokenMapping,\n",
-    "    temperature: float = 1.0,\n",
-    "    k: int | None = None,\n",
-    ") -> str:\n",
-    "    # Set model into \"evaluation mode\" (deactivates things like Dropout layers)\n",
-    "    model.eval()\n",
-    "    tokenized_text: list[str] = tokenize_text(input_str)\n",
-    "    input_tensor = tokens_to_id_tensor(\n",
-    "        tokens=tokenized_text,\n",
-    "        token_id_mapping=token_mapping.token2id,\n",
-    "    )\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        output = model(input_tensor.to(device))\n",
-    "        # Use temperature to change probabilities\n",
-    "        probabilities = nn.functional.softmax(\n",
-    "            output[0, -1] / temperature,\n",
-    "            dim=0,\n",
-    "        )\n",
-    "        # Sampling from probabilities\n",
-    "        sorted_ids = torch.argsort(probabilities, descending=True)\n",
-    "        # Top-k: Defaults to using all given characters\n",
-    "        if k is None:\n",
-    "            sorted_ids_subset = sorted_ids\n",
-    "        else:\n",
-    "            sorted_ids_subset = sorted_ids[:k]\n",
-    "        index_of_sorted = torch.multinomial(\n",
-    "            probabilities[sorted_ids_subset],\n",
-    "            1,\n",
-    "        ).item()\n",
-    "        next_char_idx = sorted_ids_subset[index_of_sorted].item()\n",
-    "        \n",
-    "        return token_mapping.id2token(next_char_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def generate_text_by_char(\n",
     "    input_str: str,\n",
     "    model,\n",
     "    token_mapping: TokenMapping = character_mapping,\n",
     "    num_chars: int = 100,\n",
     "    temperature: float = 1.0,\n",
-    "    k: int | None = None,\n",
+    "    topk: int | None = None,\n",
     ") -> str:\n",
+    "    tokenized_text: list[str] = tokenize_text(input_str)\n",
     "    generated_tokens = []\n",
     "    for _ in range(num_chars):\n",
-    "        next_char = next_character(\n",
-    "            input_str=(input_str + ''.join(generated_tokens)),\n",
+    "        new_char = next_token(\n",
+    "            tokenized_text=(tokenized_text + generated_tokens),\n",
     "            model=model,\n",
     "            token_mapping=token_mapping,\n",
     "            temperature=temperature,\n",
-    "            k=k,\n",
+    "            topk=topk,\n",
     "        )\n",
-    "        generated_tokens.append(next_char)\n",
+    "        generated_tokens.append(new_char)\n",
     "    # Input string and generated string\n",
-    "    full_text = input_str+ ''.join(generated_tokens)\n",
+    "    full_text = ''.join(tokenized_text + generated_tokens)\n",
     "    return full_text"
    ]
   },
@@ -361,51 +318,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.2609775224051916\n",
-      "[00m 6.3s (0 0%) 1.8597]\n",
+      "Epoch 1/5, Loss: 2.2764747702656463\n",
+      "[00m 6.3s (0 0%) 1.9193]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be magk,\n",
-      "feard supond tebutther cucpether,\n",
-      "to nowd tood.\n",
+      "to be or not to be thee inthe to all haim cato recfoneb, eve ie to thee miands, and hit mren,\n",
+      "yey brated nites lermes;\n",
+      "Epoch 2/5, Loss: 1.9104908132705445\n",
+      "[00m 12.8s (1 20%) 1.9763]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to belavg winc.\n",
+      "iplefess weser.\n",
       "\n",
-      "voe; tham shart, nust of bendaring that wo. \n",
-      "Epoch 2/5, Loss: 1.9069556816698263\n",
-      "[00m 12.7s (1 20%) 1.9038]\n",
+      "ayled, ofe sort, am plyder and gardis't, i stecmong; arope sert, i are\n",
+      "a\n",
+      "Epoch 3/5, Loss: 1.8275297895407143\n",
+      "[00m 19.1s (2 40%) 1.6987]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to beir gunt as you the do is the trun; all, is do make, endon.\n",
+      "to be or not to bein the prup to mar us the sever, go sto have heir why his are'd,\n",
+      "and i's: be agiolids than spere sai\n",
+      "Epoch 4/5, Loss: 1.7852085169892722\n",
+      "[00m 25.6s (3 60%) 1.9129]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to beard be were\n",
+      "i shalld?\n",
       "\n",
-      "menenius:\n",
-      "wath qummy ao'r, te't me\n",
-      "morci\n",
-      "Epoch 3/5, Loss: 1.8219082584777198\n",
-      "[00m 19.0s (2 40%) 1.7544]\n",
-      "------------------------------------------------------------------------\n",
-      "To be or not to be all med guare with trustoleceria:\n",
-      "with to the cumm.\n",
+      "blius canto love: vence anur!\n",
+      "as for any inges o, he fle, where read eaks?\n",
       "\n",
-      "firt begoous: moded home, i kneed corior:\n",
-      "spiv\n",
-      "Epoch 4/5, Loss: 1.779409009427689\n",
-      "[00m 25.4s (3 60%) 1.8045]\n",
+      "a\n",
+      "Epoch 5/5, Loss: 1.7580973786667893\n",
+      "[00m 32.0s (4 80%) 2.1375]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be comage he giet do dimmackees thy geart in ladiones, sun\n",
-      "be caius; ins ad renib the love look. iye b\n",
-      "Epoch 5/5, Loss: 1.7532570772658522\n",
-      "[00m 31.7s (4 80%) 1.6090]\n",
-      "------------------------------------------------------------------------\n",
-      "To be or not to beglum.\n",
+      "to be or not to becoundinius stome nos.\n",
       "\n",
-      "volumnius:\n",
-      "who whis\n",
-      "to yourt for i coor hids\n",
-      "fare a bom; when ind fese were leadech seest, yo\n"
+      "coziniunidius, wouk\n",
+      "not offer\n",
+      "are your cmalowrer heor bey you of sworkly hear\n"
      ]
     }
    ],
@@ -446,17 +401,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be the generia:\n",
-      "now thun i but if loor,\n",
-      "enepont pould whose it my aless\n",
-      "piton this to as you whis in r\n"
+      "to be or not to beether he eldielw.\n",
+      "\n",
+      "cominius:\n",
+      "vird,\n",
+      "unou welf to gol the selved,\n",
+      "and not that denia in all fuch the b\n"
      ]
     }
    ],
@@ -493,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,6 +541,41 @@
    "metadata": {},
    "source": [
     "## Define Text Genaration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text_by_token(\n",
+    "    input_str: str,\n",
+    "    model,\n",
+    "    token_mapping: TokenMapping = token_mapping,\n",
+    "    tokenizer = my_tokenizer,\n",
+    "    num_tokens: int = 100,\n",
+    "    temperature: float = 1.0,\n",
+    "    topk: int | None = None,\n",
+    ") -> str:\n",
+    "    tokenized_text = tokenize_text_from_tokenizer(\n",
+    "        tokenizer=tokenizer,\n",
+    "        text=input_str,\n",
+    "    )\n",
+    "    generated_tokens = []\n",
+    "    for _ in range(num_tokens):\n",
+    "        new_token = next_token(\n",
+    "            tokenized_text=(tokenized_text + generated_tokens),\n",
+    "            model=model,\n",
+    "            token_mapping=token_mapping,\n",
+    "            temperature=temperature,\n",
+    "            topk=topk,\n",
+    "        )\n",
+    "        generated_tokens.append(new_token)\n",
+    "    # Input string and generated string\n",
+    "    output_ids = tokenizer.convert_tokens_to_ids(tokenized_text + generated_tokens)\n",
+    "    full_text = tokenizer.decode(output_ids)\n",
+    "    return full_text"
    ]
   },
   {
@@ -649,26 +641,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.222023793380626\n",
-      "[00m 2.6s (0 0%) 5.8012]\n",
+      "Epoch 1/5, Loss: 6.178692927905823\n",
+      "[00m 2.6s (0 0%) 6.0003]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be : of s bring holding. the prisoner with of shields tongue. shallath, they citizen coffin find masters won.lam but : auf issue are,\n",
-      "Epoch 2/5, Loss: 5.59244353927835\n",
-      "[00m 5.3s (1 20%) 4.5287]\n",
+      "to be or not to be mat :? done they him he com fl butcher, with : your your, the,nia : but it cannotrti he an will s - forth\n",
+      "Epoch 2/5, Loss: 5.408855026365777\n",
+      "[00m 5.3s (1 20%) 5.3355]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ' s the horses the battle of the i could : and fairness strokes my to see all themselves mercyus you. their than, made me er slaves\n",
-      "Epoch 3/5, Loss: 5.035860540803042\n",
-      "[00m 7.9s (2 40%) 4.0187]\n",
+      "to be or not to be am all upon leaves sword only our op may aside world is with you. all he lip ofs ve as, prayer. that us, is,\n",
+      "Epoch 3/5, Loss: 4.877313198544393\n",
+      "[00m 8.0s (2 40%) 4.4577]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be day ; nay, devotion are - people, sir? is coriolan not o shall and in pride : la that token then he lady, do\n",
-      "Epoch 4/5, Loss: 4.611682188771937\n",
-      "[00m 10.6s (3 60%) 5.0935]\n",
+      "to be or not to be intend his yarn shericertius : i off, vol your most hostages way the behold rather em blood, vol interior : would what ta pity co\n",
+      "Epoch 4/5, Loss: 4.477121763855871\n",
+      "[00m 10.7s (3 60%) 4.6280]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be believe know, so womb, like horse? messenger. fix sound? what, and gr look o us is o the likely will done, is\n",
-      "Epoch 5/5, Loss: 4.2799862336068255\n",
-      "[00m 13.3s (4 80%) 4.0613]\n",
+      "to be or not to be let to cominius, i shall back home we shall day with harm price ; where slip my incorporate for the souths than hat affection to your\n",
+      "Epoch 5/5, Loss: 4.169655736635491\n",
+      "[00m 13.4s (4 80%) 4.6953]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be constant any to good seat towns you, i am it'tis, well, greaterlves a damns, weep you'd you titus one bled\n"
+      "to be or not to be them, and i - manner! corioli, bonnet to him are ; and dam enough. virgilia : i': ears you true,\n"
      ]
     }
    ],
@@ -691,8 +683,15 @@
     "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
     "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
     "    print('-'*72)\n",
-    "    output = generate_text(my_tokenizer, model, 'To be or not to be', 30)\n",
-    "    print(output)\n"
+    "    output = generate_text_by_token(\n",
+    "        input_str='To be or not to be',\n",
+    "        model=model,\n",
+    "        token_mapping=token_mapping,\n",
+    "        tokenizer=my_tokenizer,\n",
+    "        num_tokens=30,\n",
+    "        temperature=1.0,\n",
+    "    )\n",
+    "    print(output)"
    ]
   },
   {
@@ -711,12 +710,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be fine. men's jun stands be of the small physicalth, hard ; men against blood to, : in is ll arguing is induced put we\n"
+      "to be or not to be the volsces are ; and your choice, the vols, and i am, and'd, and's ay? marcius : if\n"
      ]
     }
    ],
    "source": [
-    "output = generate_text(my_tokenizer, model, 'To be or not to be', 30)\n",
+    "output = generate_text_by_token(\n",
+    "        input_str='To be or not to be',\n",
+    "        model=model,\n",
+    "        token_mapping=token_mapping,\n",
+    "        tokenizer=my_tokenizer,\n",
+    "        num_tokens=30,\n",
+    "        temperature=1.0,\n",
+    "        topk=10,\n",
+    "    )\n",
     "print(output)"
    ]
   },
