--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import annotations"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,6 +31,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_text(text: str) -> str:\n",
+    "    # Can be multiple actions to normalize text\n",
+    "    # Only keep ASCII letters and numbers and whitespace characters \n",
+    "    import string\n",
+    "    acceptable_characters = (\n",
+    "        string.ascii_letters\n",
+    "        + string.digits\n",
+    "        + string.whitespace\n",
+    "    )\n",
+    "    normalized_text = ''.join(\n",
+    "        filter(lambda letter: letter in acceptable_characters, text)\n",
+    "    )\n",
+    "    # Make text lower-case\n",
+    "    normalized_text = normalized_text.lower()\n",
+    "    return normalized_text"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,6 +72,13 @@
    "metadata": {},
    "source": [
     "### Postprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoding: Putting It All Together"
    ]
   },
   {
@@ -110,8 +149,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "udacity-nlp-fundamentals",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
