--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -61,6 +61,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pretokenize_text(text: str) -> list[str]:\n",
+    "    # Character-based\n",
+    "    smaller_pieces = [char for char in text]\n",
+    "    return smaller_pieces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pretokenize_text(text: str) -> list[str]:\n",
+    "    # Split based on spaces\n",
+    "    smaller_pieces = text.split()\n",
+    "    return smaller_pieces"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
