--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import annotations"
+    "from __future__ import annotations\n",
+    "\n",
+    "import string\n",
+    "import re"
    ]
   },
   {
@@ -38,11 +41,12 @@
    "source": [
     "def normalize_text(text: str) -> str:\n",
     "    # Can be multiple actions to normalize text\n",
-    "    # Only keep ASCII letters and numbers and whitespace characters \n",
-    "    import string\n",
+    "    # Only keep ASCII letters, numbers, punctuation, and whitespace characters\n",
+    "    # Evquivalent to string.printable\n",
     "    acceptable_characters = (\n",
     "        string.ascii_letters\n",
     "        + string.digits\n",
+    "        + string.punctuation\n",
     "        + string.whitespace\n",
     "    )\n",
     "    normalized_text = ''.join(\n",
@@ -89,6 +93,29 @@
    "metadata": {},
    "source": [
     "### Tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine normalization and pretokenization steps before breaking things further\n",
+    "def tokenize_text(text: str) -> list[str]:\n",
+    "    # Apply created steps \n",
+    "    normalized_text: str = normalize_text(text)\n",
+    "    pretokenized_text: list[str] = pretokenize_text(normalized_text)\n",
+    "    tokens = []\n",
+    "    # Go through small pieces to make full tokens\n",
+    "    for word in pretokenized_text:\n",
+    "        tokens.extend(\n",
+    "            re.findall(\n",
+    "                f'[\\w]+|[{string.punctuation}]', # Split word at punctuations \n",
+    "                word,\n",
+    "            )\n",
+    "        )\n",
+    "    return tokens"
    ]
   },
   {
