Postprocessing step (BOS & EOS) tokens

--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -126,6 +126,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Useful for some tasks\n",
+    "def postprocess_tokens(tokens: list[str]) -> list[str]:\n",
+    "    # Add beginning and end of sequence tokens\n",
+    "    bos_token = '##BOS##'\n",
+    "    eos_token = '##EOS##'\n",
+    "    updated_tokens = (\n",
+    "        [bos_token]\n",
+    "        + tokens\n",
+    "        + [eos_token]\n",
+    "    )\n",
+    "    return updated_tokens"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
