Encoder & decoder for token<-->ID mapping

--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +149,210 @@
    "metadata": {},
    "source": [
     "### Encoding: Putting It All Together"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now try out our full tokenization process! Let's use this sample text to\n",
+    "see how our tokenization pipeline handles it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mr. Louis continued to say, \"Penguins are important, \n",
+      "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Mr. Louis continued to say, \"Penguins are important, \\nbut we mustn\\'t forget the nuumber 1 priority: the READER!\"\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
+    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
+    "'''\n",
+    "\n",
+    "print(sample_text)\n",
+    "sample_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokens = tokenize_text(sample_text)\n",
+    "tokens = postprocess_tokens(tokens)\n",
+    "\n",
+    "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now need to encode the tokens to IDs we'll give to a model. But first we need\n",
+    "to define how to map each token to a unique ID. An easy method can be to\n",
+    "arbitrarily count the unique tokens from our corpus.\n",
+    "\n",
+    "We'll use the following as our sample corpus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normally this would be much bigger\n",
+    "sample_corpus = (\n",
+    "    '''Mr. Louis continued to say, \"Penguins are important, \\nbut we mustn't forget the nuumber 1 priority: the READER!\"''',\n",
+    "    '''BRUTUS:\\nHe's a lamb indeed, that baes like a bear.''',\n",
+    "    '''Both by myself and many other friends:\\mBut he, his own affections' counsellor,\\nIs to himself--I will not say how true--\\nBut to himself so secret and so close,'''\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve unique tokens (from the pipeline defined above) in a set\n",
+    "unique_tokens = set()\n",
+    "for text in sample_corpus:\n",
+    "    tokens_from_text = tokenize_text(text)\n",
+    "    tokens_from_text = postprocess_tokens(tokens_from_text)\n",
+    "    unique_tokens.update(tokens_from_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create mapping (dictionary) for unique tokens using arbitrary & unique IDs\n",
+    "token2id = {\n",
+    "    token: idx\n",
+    "    for idx, token in enumerate(unique_tokens)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For good measure, create a mapping for IDs to convert back to token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id2token = {idx: token for token, idx in token2id.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create our encoder and decoder to transform our tokens to IDS and back"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encode(tokens: list[str]) -> list[int]:\n",
+    "    # Note this doesn't handle tokens not mapped\n",
+    "    encoded_tokens = [\n",
+    "        token2id[token]\n",
+    "        for token in tokens\n",
+    "    ]\n",
+    "    return encoded_tokens\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode(ids: list[int]) -> list[str]:\n",
+    "    token_strings = [\n",
+    "        id2token[idx]\n",
+    "        for idx in ids\n",
+    "    ]\n",
+    "    return token_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens:\n",
+      "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
+      "\n",
+      "Encoded Tokens:\n",
+      "[32, 0, 1, 37, 10, 52, 33, 40, 39, 43, 24, 15, 40, 58, 46, 48, 14, 18, 11, 8, 56, 35, 34, 26, 8, 41, 3, 39, 9]\n",
+      "\n",
+      "Decoded Tokens:\n",
+      "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing out encoding and decoding \n",
+    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
+    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
+    "'''\n",
+    "tokens = tokenize_text(sample_text)\n",
+    "tokens = postprocess_tokens(tokens)\n",
+    "\n",
+    "print(f'Tokens:\\n{tokens}\\n')\n",
+    "\n",
+    "encoded_tokens = encode(tokens)\n",
+    "print(f'Encoded Tokens:\\n{encoded_tokens}\\n')\n",
+    "\n",
+    "decoded_tokens = decode(encoded_tokens)\n",
+    "print(f'Decoded Tokens:\\n{decoded_tokens}\\n')"
    ]
   },
   {
